--- a/05-Object Oriented Programming/Additional References 05-Object Oriented Programming.ipynb
+++ b/05-Object Oriented Programming/Additional References 05-Object Oriented Programming.ipynb
@@ -2,8 +2,170 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "74af911c",
+   "id": "efe533cc",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "# Inheritence"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "ce961aa4",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "classes are called derived classes, the classes that we derive from are called base classes. Important benefits of inheritance are code reuse and reduction of complexity of a program. The derived classes (descendants) override or extend the functionality of base classes (ancestors).\n",
+    "\n",
+    "Let's see an example by incorporating our previous work on the Dog class:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d52f690",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "class Animal:\n",
+    "    def __init__(self):\n",
+    "        print(\"Animal created\")\n",
+    "\n",
+    "    def whoAmI(self):\n",
+    "        print(\"Animal\")\n",
+    "\n",
+    "    def eat(self):\n",
+    "        print(\"Eating\")\n",
+    "\n",
+    "\n",
+    "class Dog(Animal):\n",
+    "    def __init__(self):\n",
+    "        Animal.__init__(self)\n",
+    "        print(\"Dog created\")\n",
+    "\n",
+    "    def whoAmI(self):\n",
+    "        print(\"Dog\")\n",
+    "\n",
+    "    def bark(self):\n",
+    "        print(\"Woof!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3751e460",
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "886d8009",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "# Polymorphism"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e370028",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    " In Python, polymorphism refers to the way in which different object classes can share the same method name, "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64562986",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "class Dog:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "\n",
+    "    def speak(self):\n",
+    "        return self.name+' says Woof!'\n",
+    "    \n",
+    "class Cat:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "\n",
+    "    def speak(self):\n",
+    "        return self.name+' says Meow!' \n",
+    "    \n",
+    "niko = Dog('Niko')\n",
+    "felix = Cat('Felix')\n",
+    "\n",
+    "print(niko.speak())\n",
+    "print(felix.speak())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9148c9ec",
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16d180f5",
    "metadata": {},
+   "source": [
+    "# Abstract Classes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17e97c24",
+   "metadata": {},
+   "source": [
+    "An abstract class can be considered as a blueprint for other classes. It allows you to create a set of methods that must be created within any child classes built from the abstract class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2bae4e0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Animal():\n",
+    "    def __init__(self,name):\n",
+    "        self.name = name\n",
+    "    def speak(self):\n",
+    "        raise NotImplementedError(\"Subclass must implement this abstract method\")\n",
+    "\n",
+    "class Dog(Animal):\n",
+    "    def speak(self):\n",
+    "        return self.name+ \"Says woof\"\n",
+    "\n",
+    "class cat(Animal):\n",
+    "    def speak(self):\n",
+    "        return self.name+ \"Says Meow\"\n",
+    "   \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74af911c",
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Additional References"
    ]
@@ -12,7 +174,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "be643a04",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -30,7 +194,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "71d6a721",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   }
